--- a/style.css
+++ b/style.css
@@ -278,7 +278,7 @@ body{
     border: 1px solid #cce7d0;
     border-radius: 100px;
     margin: 15px 0;
-   
+    cursor: pointer;
 }
 
 #feature {
@@ -287,6 +287,8 @@ body{
     justify-content:space-between;
     flex-wrap: wrap;
     padding: 3rem;
+
+    
 }
 
 
@@ -303,6 +305,7 @@ body{
      align-items: center;
     position: relative;
     object-fit: fill;
+    cursor: pointer;
     
   
 }
@@ -403,6 +406,7 @@ body{
   max-height: 70%;
   padding-top: 10px;
   max-width: 50px;
+ 
 }
 
 
