--- a/style.css
+++ b/style.css
@@ -1070,8 +1070,77 @@ footer .copyright
 
 
 }
+#page-header-shoes{
+    background-image: url(img/products/drop2.jpg);
+    width: 100%;
+    height: 40vh;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    padding: 14px;
+    
+
+
+}
+
+
+
+#page-header-bags{
+    background-image: url(img/products/bag99.jpg);
+    width: 100%;
+    height: 40vh;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    padding: 14px;
+
+
+}
+
+
+#page-header-watches{
+    background-image: url(img/products/drop22.jpg);
+    width: 100%;
+    height: 40vh;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    padding: 14px;
+
+
+}
+
+
+
 #page-header h2,
 #page-header p {
+    color: white;
+    font-weight: 900;
+}
+
+#page-header-shoes h2,
+#page-header-shoes p {
+    color: white;
+    font-weight: 900;
+}
+
+
+
+#page-header-bags h2,
+#page-header-bags p {
+    color: white;
+    font-weight: 900;
+}
+
+
+#page-header-watches h2,
+#page-header-watches p {
     color: white;
     font-weight: 900;
 }
