--- a/style.css
+++ b/style.css
@@ -944,7 +944,7 @@ footer .copyright
 
     #product1 .pro-container {
         
-        justify-content:space-between;
+        justify-content:space-evenly;
         display: flex;
         flex-direction: row;
     }
